frame/support/test/tests/pallet_ui/trait_002.stderr
error: Invalid usage of `#[pallet::constant]`, syntax must be `type $SomeIdent: Get<$SomeType>;`
 --> $DIR/trait_002.rs:9:3
  |
9 |         type U;
  |         ^^^^

error: expected `:`
 --> $DIR/trait_002.rs:9:9
  |
9 |         type U;
  |               ^
